--- a/TrueStudio/W5x00-Multicast/W5x00-Multicast.ioc
+++ b/TrueStudio/W5x00-Multicast/W5x00-Multicast.ioc
@@ -15,9 +15,10 @@ Mcu.Pin1=PA3
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
-Mcu.Pin5=PB6
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin5=PC7
+Mcu.Pin6=PB6
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -46,6 +47,8 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F401
 PCC.MCU=STM32F401R(D-E)Tx
@@ -75,13 +78,13 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=W5X00-Multicast.ioc
-ProjectManager.ProjectName=W5X00-Multicast
+ProjectManager.ProjectFileName=W5x00-Multicast.ioc
+ProjectManager.ProjectName=W5x00-Multicast
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
